# teamcenter-itk-projects-templates

./: README.md
CLion_GENERAL_ITK_application/: CMakeLists.txt  helper.hpp  main.cpp
MSVS_GENERAL_ITK_application/: GENERAL_ITK_application.sln  GENERAL_ITK_application.vcxproj  GENERAL_ITK_application_tc_133.props  main.cpp
